test/semantic_error/se_expr_func_undef.c0
int f() {int a; a = func();}
